// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - accepted bin 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.ACCEPTED_BIN" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - accepted pick 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.ACCEPTED_PICK" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - complete 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.COMPLETE" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - deleted 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.DELETED" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - no pallets found 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.NO_PALLETS_FOUND" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to bin 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_BIN" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to pick 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card for each picking type: Pick status - ready to work 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_WORK" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card with items (some filtered) 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text
        style={Object {}}
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card with items and show checkbox in pallet title 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="unchecked"
          uncheckedColor="#0071e9"
        />
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text
        style={
          Object {
            "paddingRight": 10,
          }
        }
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;

exports[`Pick pallet info card render tests renders the card with items and show pallet selected 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <Memo(Pressable)
    onPress={[MockFunction]}
    testID="palletPress"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#dbecff",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <withTheme(Checkbox)
          color="#0071e9"
          onPress={[Function]}
          status="checked"
          uncheckedColor="#0071e9"
        />
        <Text>
          [missing "en.PALLET.PALLET_ID" translation] 2
        </Text>
      </View>
      <Text>
        [missing "en.PICKING.READY_TO_PICK" translation]
      </Text>
      <Text
        style={
          Object {
            "paddingRight": 10,
          }
        }
      >
        ABAR1-1
      </Text>
    </View>
    <FlatList
      data={Array []}
      keyExtractor={[Function]}
      renderItem={[Function]}
      scrollEnabled={false}
    />
  </Memo(Pressable)>
</View>
`;
